<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.ChatActivity">

    <ImageView
        android:id="@+id/backImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="centerInside"
        android:tint="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_chevron_left_white_24dp" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="@dimen/logo_image_width"
        android:layout_height="@dimen/logo_image_height"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_black" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/online_caps"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/inputBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/bg_bubble_gray"
        android:paddingLeft="@dimen/padding_24dp"
        android:paddingTop="@dimen/padding_8dp"
        android:paddingRight="@dimen/padding_24dp"
        android:paddingBottom="@dimen/padding_8dp"
        app:layout_constraintBottom_toBottomOf="@+id/actionButton"
        app:layout_constraintEnd_toStartOf="@+id/actionButton"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/message"
            android:inputType="textCapSentences"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="96dp"
            app:layout_constraintHeight_min="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/recordImageView"
            android:layout_width="@dimen/icon_size_8dp"
            android:layout_height="@dimen/icon_size_8dp"
            android:background="@drawable/bg_circle_accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_12dp"
            android:layout_marginLeft="@dimen/margin_12dp"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/recordImageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="00:00" />

        <LinearLayout
            android:id="@+id/cancelLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/timeTextView"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_chevron_left_gray_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swipe_for_cancel"
                android:textColor="@color/hint_text"
                android:textSize="18sp" />
        </LinearLayout>

        <android.support.constraint.Group
            android:id="@+id/recordGroup"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="cancelLayout,timeTextView, recordImageView" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/actionButton"
        android:layout_width="@dimen/action_image_view_size"
        android:layout_height="@dimen/action_image_view_size"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="8dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_mic_89dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_8dp"
        app:layout_constraintBottom_toTopOf="@+id/inputBarLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusTextView"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>